added market movers